[package]
name    = "microml_arena"
version = "0.1.0"
authors = ["malowebi <malowebi@protonmail.com>"]
license = "Apache-2.0"
edition = "2021"

[lib]
name    = "microml_arena"
path    = "src/lib.rs"
test    = true
doctest = false

[dependencies]
num         = "0.4.0"
serde       = { version = "1.0", features = ["derive"] }
serde_json  = { version = "1.0", features = ["preserve_order"] }
thiserror   = "1.0.24"
